footer kısmı tamamlandı.

--- a/home-digital-agency.html
+++ b/home-digital-agency.html
@@ -1516,17 +1516,11 @@
                             <div class="col-lg-7">
                                 <div class="social-media d-flex justify-content-end">
                                     <ul class="rest d-flex align-items-center fz-14">
-                                        <li class="hover-this cursor-pointer">
-                                            <a href="#0" class="hover-anim"><i class="fab fa-facebook-f mr-10"></i> Facebook</a>
-                                        </li>
-                                        <li class="hover-this cursor-pointer ml-50">
-                                            <a href="#0" class="hover-anim"><i class="fab fa-dribbble mr-10"></i> Dribbble</a>
-                                        </li>
                                         <li class="hover-this cursor-pointer ml-50">
                                             <a href="#0" class="hover-anim"><i class="fab fa-linkedin-in mr-10"></i> LinkedIn</a>
                                         </li>
                                         <li class="hover-this cursor-pointer ml-50">
-                                            <a href="#0" class="hover-anim"><i class="fab fa-instagram mr-10"></i> Instagram</a>
+                                            <a href="https://www.instagram.com/arbekadigital" class="hover-anim"><i class="fab fa-instagram mr-10"></i> Instagram</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1537,23 +1531,23 @@
                                 <div class="call-action">
                                     <h2 class="d-slideup wow fz-60 fw-600">
                                         <span class="sideup-text">
-                                            <span class="up-text">Have a project in mind?</span>
+                                            <span class="up-text">İşletmenizi Büyütmek Mi İstiyorsunuz?</span>
                                         </span>
                                         <span class="sideup-text">
-                                            <span class="up-text underline"><a href="page-contact.html"
-                                                    class="main-color">Let’s
-                                                    get to work.</a></span>
+                                            <span class="up-text underline"><a href="https://www.instagram.com/arbekadigital"
+                                                    class="main-color">Hadi 
+                                                   Birlikte Çalışalım.</a></span>
                                         </span>
                                     </h2>
                                     <div class="info mt-80 d-flex align-items-center">
                                         <div>
                                             <a href="#0" class="butn butn-md butn-bord-thin radius-30">
-                                                <span class="text">Support@Website.com</span>
+                                                <span class="text">arbekadigital@gmail.com</span>
                                             </a>
                                         </div>
                                         <div>
-                                            <a href="#0" class="butn butn-md butn-bord-thin radius-30 ml-30">
-                                                <span class="text">+2 456 (343) 24 45</span>
+                                            <a href="https://www.instagram.com/arbekadigital" class="butn butn-md butn-bord-thin radius-30 ml-30">
+                                                <span class="text">İnstagram' dan Bizi Takip Et</span>
                                             </a>
                                         </div>
                                     </div>
@@ -1561,41 +1555,12 @@
                             </div>
                             <div class="col-lg-4 offset-lg-1 bord-left">
                                 <div class="column">
-                                    <h6 class="sub-title mb-30">Useful Links</h6>
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <ul class="rest fz-14">
-                                                <li class="mb-15">
-                                                    <a href="#0">About</a>
-                                                </li>
-                                                <li class="mb-15">
-                                                    <a href="#0">Services</a>
-                                                </li>
-                                                <li class="mb-15">
-                                                    <a href="#0">Blog</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#0">Contact</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-6">
-                                            <ul class="rest fz-14">
-                                                <li class="mb-15">
-                                                    <a href="#0">FAQS</a>
-                                                </li>
-                                                <li class="mb-15">
-                                                    <a href="#0">Term & Conditions</a>
-                                                </li>
-                                                <li class="mb-15">
-                                                    <a href="#0">Privacy policy</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#0">Help</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
+                                    <h6 class="sub-title mb-30">Mesajımız</h6>
+                                    <p class="fz-14">
+                                        Sizin de işletmenizi büyütmeye, dijitalde görünür olmaya, saatler veya günler sürecek olan işlerinizi dakikalara indirmeye, işiniz için harcadığınız vakti sevdiklerinizle geçirmeye ihtiyacınız varsa bize ulaşın.
+                                        <br><br>
+                                        Size ve sektörünüze en uygun seçenekleri sunalım. Siz de iş sahibi olmanın size getireceği uzun çalışma saatlerinden kurtulup hayatınızın tadını çıkarın.
+                                    </p>
                                 </div>
                                 <div class="subscribe-minimal mt-50">
                                     <form action="contact.php">
@@ -1610,9 +1575,9 @@
                             </div>
                         </div>
                         <div class="text-center pt-30 pb-30 main-bg mt-80">
-                            <p class="fz-14">© 2023 InFolio is Proudly Powered by <span class="underline main-color"><a
-                                        href="https://themeforest.net/user/ui-themez"
-                                        target="_blank">UI-ThemeZ</a></span></p>
+                            <p class="fz-14">© 2025 Tüm Hakları Saklıdır. <span class="underline main-color"><a
+                                        href="https://www.instagram.com/arbekadigital"
+                                        target="_blank">arbekadigital</a></span></p>
                         </div>
                     </div>
                 </div>
