--- a/home-digital-agency.html
+++ b/home-digital-agency.html
@@ -1163,7 +1163,7 @@
                             <div class="col-lg-6 colmn main-bg">
                                 <div class="testim-crev">
                                     <div class="sec-head mb-50">
-                                        <h3 class="text-u ls1">Testimonails</h3>
+                                        <h3 class="text-u ls1">Neden Biz?</h3>
                                     </div>
                                     <div class="testim-swiper" data-carousel="swiper" data-loop="true" data-space="30">
                                         <div id="content-carousel-container-unq-testim" class="swiper-container"
@@ -1174,8 +1174,8 @@
                                                         <div class="content">
                                                             <div class="d-flex align-items-center">
                                                                 <div>
-                                                                    <span class="tag sub-title mb-15">Design
-                                                                        Quality</span>
+                                                                    <span class="tag sub-title mb-15">Arbeka
+                                                                        Teknik </span>
                                                                 </div>
                                                                 <div class="ml-auto">
                                                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -1192,12 +1192,12 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <p class="fz-22">I have been hiring people in this
-                                                                    space for a number of years
-                                                                    and I have never seen this level of
-                                                                    professionalism. It really feels like you are
-                                                                    working with a team that can get the job
-                                                                    done.</p>
+                                                                <p class="fz-22">Yazılım Mühendisi olan 3 genç tarafından 2025' te kurumsallaşan şirket, 
+                                                                    bu zamana kadar olan tecrübelerini tek bir çatı altında birleştirdi. Çalıştığımız şirketlere
+                                                                    partner gözüyle baktığımız için ve büyümenin tek yolunun onların da büyümesi olduğunu benimsedik. 
+                                                                    Sürekli en yeni çıkan teknolojileri takip edip başarılarımızı bir adım daha yukarıya taşıdık.
+                                                                    Dijital dünyanın gereksinimleri göz ardı edilemeyecek seviyededir. İlk dokunuş dijitalde.
+                                                                </p>
                                                             </div>
                                                             <div class="info mt-40">
                                                                 <div class="img-curv main-bg">
@@ -1224,7 +1224,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="ml-30">
-                                                                    <h6>Adam Beckley</h6>
+                                                                    <h6>Arbeka Digital</h6>
                                                                     <span class="sub-title main-color">Founder &
                                                                         CEO</span>
                                                                 </div>
@@ -1563,14 +1563,10 @@
                                     </p>
                                 </div>
                                 <div class="subscribe-minimal mt-50">
-                                    <form action="contact.php">
-                                        <div class="form-group rest">
-                                            <input type="email" placeholder="Type Your Email">
-                                            <button type="submit">
-                                                <i class="ti-arrow-top-right"></i>
-                                            </button>
-                                        </div>
-                                    </form>
+                                    <p class="fz-14 mb-10">Detaylı bilgi için bizi Instagram’dan takip et:</p>
+                                    <a href="https://www.instagram.com/arbekadigital" target="_blank" class="d-inline-flex align-items-center fz-14">
+                                        <i class="fab fa-instagram" style="font-size: 20px; margin-right: 8px;"></i> @arbekadigital
+                                    </a>
                                 </div>
                             </div>
                         </div>
