--- a/home-digital-agency.html
+++ b/home-digital-agency.html
@@ -436,56 +436,41 @@
                                     <div class="img">
                                         <img src="assets/imgs/works/1/1.jpg" alt="">
                                     </div>
-                                    <div class="more text-u ls1 fz-12">
-                                        <a href="project6.html">View Project <i class="ml-15 ti-arrow-top-right"></i></a>
-                                    </div>
                                 </div>
                                 <div class="cluom" data-tab="tab-2">
                                     <div class="info">
-                                        <h6 class="sub-title opacity-7">UI-UX Design</h6>
-                                        <h4>Proof Template</h4>
+                                        <h6 class="sub-title opacity-7">Otomasyonlar</h6>
+                                        <h4>Süreç Otomasyonu</h4>
                                     </div>
                                     <div class="img">
                                         <img src="assets/imgs/works/1/2.jpg" alt="">
                                     </div>
-                                    <div class="more text-u ls1 fz-12">
-                                        <a href="project5.html">View Project <i class="ml-15 ti-arrow-top-right"></i></a>
-                                    </div>
                                 </div>
                                 <div class="cluom" data-tab="tab-3">
                                     <div class="info">
-                                        <h6 class="sub-title opacity-7">UI-UX Design</h6>
-                                        <h4>Ledge Phone</h4>
+                                        <h6 class="sub-title opacity-7">Geliştirme</h6>
+                                        <h4>Web & Uygulama Geliştirme</h4>
                                     </div>
                                     <div class="img">
                                         <img src="assets/imgs/works/1/3.jpg" alt="">
                                     </div>
-                                    <div class="more text-u ls1 fz-12">
-                                        <a href="project4.html">View Project <i class="ml-15 ti-arrow-top-right"></i></a>
-                                    </div>
                                 </div>
                                 <div class="cluom" data-tab="tab-4">
                                     <div class="info">
-                                        <h6 class="sub-title opacity-7">UI-UX Design</h6>
-                                        <h4>Frame Sans</h4>
+                                        <h6 class="sub-title opacity-7">Reklamlar</h6>
+                                        <h4>Yapay Zeka Destekli Reklamlar</h4>
                                     </div>
                                     <div class="img">
                                         <img src="assets/imgs/works/1/4.jpg" alt="">
                                     </div>
-                                    <div class="more text-u ls1 fz-12">
-                                        <a href="project3.html">View Project <i class="ml-15 ti-arrow-top-right"></i></a>
-                                    </div>
                                 </div>
                                 <div class="cluom" data-tab="tab-5">
                                     <div class="info">
-                                        <h6 class="sub-title opacity-7">UI-UX Design</h6>
-                                        <h4>Modern Minimalist</h4>
+                                        <h6 class="sub-title opacity-7">Sosyal Platformlar</h6>
+                                        <h4>Sosyal Medya Hesap Yönetimi</h4>
                                     </div>
                                     <div class="img">
                                         <img src="assets/imgs/works/1/5.jpg" alt="">
-                                    </div>
-                                    <div class="more text-u ls1 fz-12">
-                                        <a href="project2.html">View Project <i class="ml-15 ti-arrow-top-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -502,15 +487,10 @@
                 <section class="process section-padding">
                     <div class="container">
                         <div class="sec-head mb-80">
-                            <h6 class="sub-title main-color mb-25">Our Process</h6>
+                            <h6 class="sub-title main-color mb-25">SÜREÇLER</h6>
                             <div class="bord pt-25 bord-thin-top d-flex align-items-center">
-                                <h2 class="fw-600">Business <span class="fw-200">Development</span></h2>
-                                <div class="ml-auto">
-                                    <a href="page-about2.html" class="go-more">
-                                        <span class="text">View More</span>
-                                        <span class="icon ti-arrow-top-right"></span>
-                                    </a>
-                                </div>
+                                <h2 class="fw-600">İşletme <span class="fw-200">Geliştirme</span></h2>
+                                
                             </div>
                         </div>
                         <div class="row md-marg">
@@ -518,53 +498,29 @@
                                 <div class="icon-img-60 mb-30">
                                     <img src="assets/imgs/serv-icons/3.png" alt="">
                                 </div>
-                                <h5 class="mb-15">Research</h5>
-                                <p>Clarifying and translating insights into foundation and creative approach</p>
-                                <div class="o-hidden">
-                                    <a href="page-about2.html" class="rmore to-in mt-30">
-                                        <span class="sub-title">Read More</span>
-                                        <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                                    </a>
-                                </div>
+                                <h5 class="mb-15">Analiz</h5>
+                                <p>İlk adım olarak problemi analiz ederiz ve sebebini saptarız.</p>
                             </div>
                             <div class="col-lg-3 col-md-6 item md-mb50">
                                 <div class="icon-img-60 mb-30">
                                     <img src="assets/imgs/serv-icons/4.png" alt="">
                                 </div>
-                                <h5 class="mb-15">Concept</h5>
-                                <p>Clarifying and translating insights into foundation and creative approach</p>
-                                <div class="o-hidden">
-                                    <a href="page-about2.html" class="rmore to-in mt-30">
-                                        <span class="sub-title">Read More</span>
-                                        <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                                    </a>
-                                </div>
+                                <h5 class="mb-15">Araştırma</h5>
+                                <p>Çözüme giden yollar bulunur. Bütçe planlaması yapılır.</p>
                             </div>
                             <div class="col-lg-3 col-md-6 item sm-mb50">
                                 <div class="icon-img-60 mb-30">
                                     <img src="assets/imgs/serv-icons/5.png" alt="">
                                 </div>
-                                <h5 class="mb-15">Implement</h5>
-                                <p>Clarifying and translating insights into foundation and creative approach</p>
-                                <div class="o-hidden">
-                                    <a href="page-about2.html" class="rmore to-in mt-30">
-                                        <span class="sub-title">Read More</span>
-                                        <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                                    </a>
-                                </div>
+                                <h5 class="mb-15">Strateji</h5>
+                                <p>Tecrübeli ekibimiz tarafından bütçe dostu bir plan yapılır. Uygulamaya konulur.</p>
                             </div>
                             <div class="col-lg-3 col-md-6 item">
                                 <div class="icon-img-60 mb-30">
                                     <img src="assets/imgs/serv-icons/6.png" alt="">
                                 </div>
-                                <h5 class="mb-15">Handover</h5>
-                                <p>Clarifying and translating insights into foundation and creative approach</p>
-                                <div class="o-hidden">
-                                    <a href="page-about2.html" class="rmore to-in mt-30">
-                                        <span class="sub-title">Read More</span>
-                                        <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                                    </a>
-                                </div>
+                                <h5 class="mb-15">Başarı</h5>
+                                <p>Gerekli uygulama ve yeterli süreç sonucunda başarıya ulaşılır.</p>
                             </div>
                         </div>
                     </div>
