revizelerden önceki son hali

--- a/home-digital-agency.html
+++ b/home-digital-agency.html
@@ -89,7 +89,7 @@
     
                 <!-- Logo -->
                 <a class="logo icon-img-100" href="#">
-                    <img src="assets/imgs/logo-light.png" alt="logo">
+                    <img src="assets/imgs/logo-dark.png" alt="logo">
                 </a>
     
                 <!-- navbar links -->
@@ -97,7 +97,7 @@
                     <ul class="navbar-nav">
                         <!-- Anasayfa -->
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">
+                            <a class="nav-link" href="#">
                                 <span class="rolling-text">Anasayfa</span>
                             </a>
                         </li>
@@ -196,14 +196,14 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <div class="item">
-                                            <a href="#0">
+                                            <a href="https://www.instagram.com/magosabeach">
                                                 <img src="assets/imgs/brands/01.png" alt="">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="item">
-                                            <a href="#0">
+                                            <a href="htttps://www.instagram.com/beerkecanakkor">
                                                 <img src="assets/imgs/brands/02.png" alt="">
                                             </a>
                                         </div>
@@ -562,7 +562,7 @@
                             <div class="col-lg-4">
                                 <div class="item md-mb50">
                                     <div class="img">
-                                        <img src="assets/imgs/team/2.jpg" alt="">
+                                        <img src="assets/imgs/team/1.jpg" alt="">
                                         <div class="info">
                                             <span class="fz-12">Kurucu Ortak</span>
                                             <h6 class="fz-18">Berke Can Akkor</h6>
@@ -580,7 +580,7 @@
                             <div class="col-lg-4">
                                 <div class="item">
                                     <div class="img">
-                                        <img src="assets/imgs/team/3.jpg" alt="">
+                                        <img src="assets/imgs/team/1.jpg" alt="">
                                         <div class="info">
                                             <span class="fz-12">Kurucu Ortak</span>
                                             <h6 class="fz-18">Kağan Aldoğan</h6>
@@ -779,7 +779,7 @@
                                                             <div class="info mt-40">
                                                                 <div class="img-curv main-bg">
                                                                     <div class="img">
-                                                                        <img src="assets/imgs/testim/t1.jpg" alt="">
+                                                                        <img src="assets/imgs/testim/t1.png" alt="">
                                                                     </div>
                                                                     <div class="shap-left-top">
                                                                         <svg viewBox="0 0 11 11" fill="none"
