projenin bitişi ve yayınlandı

--- a/home-digital-agency.html
+++ b/home-digital-agency.html
@@ -139,26 +139,6 @@
                     <div class="container-fluid rest">
                         <div class="row justify-content-end">
                             <div class="col-lg-9 rest">
-                                <div class="caption">
-                                    <h1>Akıllı Asistanlar, Rezervasyon Robotları ve Daha Fazlası...</h1>
-
-                                    <div class="shap-left-top">
-                                        <svg viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"
-                                            class="w-11 h-11">
-                                            <path
-                                                d="M11 1.54972e-06L0 0L2.38419e-07 11C1.65973e-07 4.92487 4.92487 1.62217e-06 11 1.54972e-06Z"
-                                                fill="#1a1a1a"></path>
-                                        </svg>
-                                    </div>
-                                    <div class="shap-right-bottom">
-                                        <svg viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"
-                                            class="w-11 h-11">
-                                            <path
-                                                d="M11 1.54972e-06L0 0L2.38419e-07 11C1.65973e-07 4.92487 4.92487 1.62217e-06 11 1.54972e-06Z"
-                                                fill="#1a1a1a"></path>
-                                        </svg>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -403,7 +383,7 @@
                                     <div class="d-flex align-items-center">
                                         <h2 class="fw-600">Başarıya Giden <span class="fw-200">Projelerimiz</span></h2>
                                         <div class="ml-auto">
-                                            <a href="portfolio-gallery.html" class="go-more">
+                                            <a href="https://www.instagram.com/arbekadigital" class="go-more">
                                                 <span class="text">Daha fazla bilgi al</span>
                                                 <span class="icon ti-arrow-top-right"></span>
                                             </a>
